# album-mastering-studio-claude-build

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
docs/: CLAUDE_BUILD_BRIEF.md  CLAUDE_WORK_LOOP.md  DANDOFF_2026-05-13.md  EQ_ARCHITECTURE_RECON_2026-05-19.md  HANDOFF.md  HANDOFF_2026-05-12_evening.md  HANDOFF_2026-05-13_session.md  HANDOFF_2026-05-14_session.md  HANDOFF_2026-05-15_evening.md  HANDOFF_2026-05-15_session.md  HANDOFF_2026-05-18_evening.md  HANDOFF_2026-05-19_evening.md  IMPLEMENTATION_PLAN.md  PARALLEL_BUILD_NOTES.md  PRIVATE_AUDIO_FIXTURES.md  PRODUCT.md  SCHEDULE_PROMPT.md  UI_CSS_RESTYLE_PLAN_2026-05-14.md  eq-7-band-plan-prompt-2026-05-19.md  preset-art-prompts.md  progress.md
docs/adr/: 0002-cross-machine-plan-handoffs.md
docs/checkpoints/: checkpoint-2026-05-14-pre-preset-retune.md  checkpoint-2026-05-15-end-of-mechanical-gates-session.md  checkpoint-2026-05-15-post-phase-a4-vm-hotfixes.md
docs/followups/: eq-7-band-codex-kickoff-2026-05-19.md  eq-7-band-plan-2026-05-19.md  infrastructure-2026-05-19.md  listening-batch-2026-05-19.md  phase-11x-home-master-aborted.md
docs/reference/: README.md  codex-implementation-plan.md  codex-research-implementation-notes.md
docs/research/: README.md  audio-mastering-technical-research.md  compass-artifact-e83b62aa.md  deep-research-report.md  mastering-settings-reference.md
docs/superpowers/plans/: 2026-05-12-warmth-presence-air.md
docs/superpowers/specs/: 2026-05-12-warmth-presence-air-design.md
src/: App.album-export.test.tsx  App.css  App.layout-css.test.ts  App.loudness-target.test.tsx  App.preset-save.test.tsx  App.tsx  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: produce_dialog_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: album.rs  analysis.rs  audio.rs  dsp.rs  engine.rs  exports.rs  files.rs  lib.rs  project.rs  sources.rs  spectrum.rs  types.rs
src-tauri/tests/: album_arc_trace.rs  album_character_bias.rs  album_plan_landing.rs  album_render.rs  album_simple_landing.rs  contracts.rs  delivery_profile_render.rs  dither_absence_of_harmonics.rs  export_volume_match.rs  preset_distinctness.rs  preset_loudness_balance.rs  preset_signature.rs
src/components/: AlbumPanel.tsx  Knob.tsx  PresetIcon.tsx  RightRail.test.tsx  RightRail.tsx  SignalChain.test.tsx  SignalChain.tsx  VisualEqPanel.tsx
src/hooks/: useTrackMaster.integration.test.tsx  useTrackMaster.ts
src/lib/: api.ts  compressor-auto.test.ts  compressor-auto.ts  effective-settings.test.ts  effective-settings.ts  export-location.test.ts  export-location.ts  history-stack.test.ts  history-stack.ts  mac-app-packaging.test.ts  preview-mock.ts  settings-transitions.test.ts  settings-transitions.ts  tauri-runtime.ts  windows-app-packaging.test.ts
test-output/tauri-project-dialogs-smoke/: native-dialog-save-as.ams.json
