[package]
name = "album-mastering-studio"
version = "0.0.0"
description = "Album Mastering Studio (Claude build)"
authors = ["Daniel Kinsner"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "album_mastering_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
symphonia = { version = "0.5", features = [
    "mp3",
    "aac",
    "isomp4",
    "flac",
    "wav",
    "pcm",
    "ogg",
    "vorbis",
] }
rodio = { version = "0.20", features = ["symphonia-all"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
hound = "3"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
