[package]
name = "album-mastering-studio"
version = "0.0.0"
description = "YES Master (Claude build)"
authors = ["Daniel Kinsner"]
edition = "2021"
rust-version = "1.77"
# Required because `src/bin/produce_dialog_smoke.rs` introduced a second
# binary target — without this, `cargo run` (and Tauri's dev command) fails
# with "could not determine which binary to run."
default-run = "album-mastering-studio"

[lib]
name = "album_mastering_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
symphonia = { version = "0.5", features = [
    "mp3",
    "aac",
    "isomp4",
    "flac",
    "wav",
    "pcm",
    "ogg",
    "vorbis",
] }
rodio = { version = "0.20", features = ["symphonia-all"] }
hound = "3"
ebur128 = "0.1"
# Phase A5: FFT for the 6-band spectral analysis. rustfft is the
# standard pure-Rust FFT implementation; no native deps.
rustfft = "6"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
