[package]
name = "album-mastering-studio"
version = "0.0.0"
description = "YES Master (Claude build)"
authors = ["Daniel Kinsner"]
edition = "2021"
rust-version = "1.77"
autobins = false
# The dialog smoke helper lives under `examples/` so release desktop
# bundles include only the main app executable.
default-run = "album-mastering-studio"

[[bin]]
name = "album-mastering-studio"
path = "src/main.rs"

[lib]
name = "album_mastering_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
symphonia = { version = "0.5", features = [
    "mp3",
    "aac",
    "isomp4",
    "flac",
    "wav",
    "pcm",
    "ogg",
    "vorbis",
] }
rodio = { version = "0.20", features = ["symphonia-all"] }
hound = "3"
ebur128 = "0.1"
# Phase A5: FFT for the 6-band spectral analysis. rustfft is the
# standard pure-Rust FFT implementation; no native deps.
rustfft = "6"
# B4: real timestamps for analysis / render / preset report fields.
# Default features (clock + std) cover RFC 3339 formatting; no
# extra serde/format features needed because every consumer here just
# wants the string. Locked at 0.4 LTS line.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
